Fix form layout issues and update question text.

--- a/acrs-portlets/src/main/webapp/css/acrs-portlets.css
+++ b/acrs-portlets/src/main/webapp/css/acrs-portlets.css
@@ -28,7 +28,7 @@ form fieldset {
 form div {
   clear: left;
   display: block;
-  width: 400px;
+/*  width: 400px; */
   zoom: 1;
   margin: 5px 0 0 0;
   padding: 1px 3px;
